--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
     <div id="container">
         <div id="screen">0123456789</div>
-        <div class="buttons"><button>C</button></div>
+        <div class="buttons"><button id="clear">C</button></div>
         <div class="buttons"><button id="num7" class="number">7</button><button id="num8" class="number">8</button><button id="num9" class="number">9</button><button id="add" class="operator">+</button></div>
         <div class="buttons"><button id="num4" class="number">4</button><button id="num5" class="number">5</button><button id="num6" class="number">6</button><button id="subtract" class="operator">-</button></div>
         <div class="buttons"><button id="num1" class="number">1</button><button id="num2" class="number">2</button><button id="num3" class="number">3</button><button id="multiply" class="operator">*</button></div>
-        <div class="buttons"><button id="num0" class="number">0</button><button id="decimal" class="number">.</button><button id="equals" class="number">=</button><button id="divide" class="operator">/</button></div>
+        <div class="buttons"><button id="num0" class="number">0</button><button id="decimal">.</button><button id="equals">=</button><button id="divide" class="operator">/</button></div>
     </div>
 
     <script src="script.js"></script>
